Django_practice_Pro_hotel_management_system-main/assets/Allfiles/Css/Style.css
/* ... */
/* Scoped: only the overlay button container inside room picture cards */
#OUR_ROOMS .ROOMS_pic .btn{
    position: absolute;
    top: 80%;
    left: 0;
    right: 0;
    width: 100%;
}
.room_btn{
  position: relative;
  display: block;
  padding: 6px 0px 5px 0px;
  text-align:center;
  cursor: pointer;
  width: 150px;
  height: 40px;
  z-index: 99;
  transition: all linear 0.9s;
  -webkit-transition: all linear 0.9s;
  -moz-transition: all linear 0.9s;
  -ms-transition: all linear 0.9s;
  -o-transition: all linear 0.9s;
}
.room_btn:after{
   content: "";
   position: absolute;
    z-index:-1;
    left:10px;
    top:0;
    left:0;
    display: block;
    width: 100%;
    height: 100%;
    z-index:-1;
    transform: scaleY(1);
    background: var(--hovercolor);
    transition: all linear 0.9s;
    -webkit-transition: all linear 0.9s;
    -moz-transition: all linear 0.9s;
    -ms-transition: all linear 0.9s;
    -o-transition: all linear 0.9s;
}
.room_btn:hover:after{
    transform: scaleY(0);
    height: 0;
}

.room_btn a {
    font-size: 18px;
    font-weight: 400;
    font-family: 'Montserrat',
        sans-serif;
    cursor: pointer;
    display: block;
    text-transform: uppercase;
    color: var(--titlecolor);
    transition: all linear 0.9s;
    -webkit-transition: all linear 0.9s;
    -moz-transition: all linear 0.9s;
    -ms-transition: all linear 0.9s;
    -o-transition: all linear 0.9s;
}

.room_btn:hover a {
    color: var(--hovercolor);
    font-weight: 700;
    display: block;
}

.room_btn:hover {
    background: var(--btnbgcolor);
}
.ROOMS_text{
    margin-top:20px;
    opacity:1;
    }
.ROOMS_text h3 {
  font-size: 30px;
  font-weight: 400;
  font-family: 'Montserrat',
  sans-serif;
  color:var(--titlecolor); 
}
.ROOMS_text span{
    font-size: 25px;
    font-weight: 600;
    color:var(--hovercolor);
}
.ROOMS_text span i{
    margin-right: 5px;
}
.ROOMS_text p{
    margin:5px 15px 10px 15px;
}
.ROOMS_text i{
       margin-bottom:10px;
       color:var(--hovercolor);
}
 
.ROOMS_info .slick-dots {
     margin-left: 0;
     margin-top: 15px;
     text-align: center;
}
.ROOMS_info .slick-dots li {
      width: 20px;
      height: 20px;
      margin: 0px 10px;
      background: var(--bgcolor);
      display: inline-block;
  }
 .ROOMS_info .slick-dots li button {
       width: 17px;
       border: 1px solid var(--textcolor);
       height: 17px;
       border-radius:50%;
       color: transparent; 
  }
 .room_slide .slick-dots .slick-active button {
     background: var(--hovercolor);
  }
/*************************
OUR AWESOME SERVICES
*************************/
#Service{
    margin-top:80px;
}
.Service_title h2 {
    width: auto;
    max-width: 100%;
    border-bottom: 2px solid var(--hovercolor);
    margin-left: auto;
    margin-right: auto;
}
.Service_title{
   margin-bottom:50px;
}

.Service_img{
    z-index:-1;
} 
.Service_img img{
    height:600px;
    
}
.Service_menu{
   z-index:999;
}
.Service_menu li .service-icon img{
  border:1px solid var(--textcolor);
  border-radius:100%;
  background:var(--textcolor);
  padding: 20px;
  cursor: pointer;
  transition: all linear 0.9s;
  -webkit-transition: all linear 0.9s;
  -moz-transition: all linear 0.9s;
  -ms-transition: all linear 0.9s;
  -o-transition: all linear 0.9s;
}
.Service_menu li .service-icon img:hover{
    background:var(--bgcolor);
}
.Service_menu li .service-menu-title{
     margin-top: 0;
     font-size: 1.1rem;
     margin-left: 0;
     font-weight: 500;
     font-family: 'Montserrat',
     sans-serif;
     color:var(--titlecolor);
}
.Service_menu li p{
     margin-top:6px;
     font-size: 0.95rem;
     margin-left: 0;
     font-weight: 400;
     line-height: 1.6;
     width: auto;
     max-width: 100%;
     color:var(--titlecolor);
}
.Service_menu li span{
    font-weight:600;
    color:var(--hovercolor);
}
.Service_items{
    margin-top:52px ;
}
.Service_items1{
     margin-top:52px;
     margin-left: 0;
}
.Service_items2 {
    margin-top:52px;
    margin-left: 0;
}
.Service_items3 {
    margin-top:52px;
    margin-left: 0;
}
/*************************
OUR GALLERY
*************************/
#GALLERY{
    margin-top:80px;
    background:var(--bgcolor);
    overflow: hidden;
}
.GALLERY_title h2 {
    width: auto;
    max-width: 100%;
    border-bottom: 2px solid var(--hovercolor);
    margin-left: auto;
    margin-right: auto;
}
.GALLERY_view{
    margin-top:40px; 
}
.GALLERY_info{
    overflow: hidden;
    margin:0px 7px;
    position: relative;
    transition: all linear 0.9s;
    -webkit-transition: all linear 0.9s;
    -moz-transition: all linear 0.9s;
    -ms-transition: all linear 0.9s;
    -o-transition: all linear 0.9s;
}
.GALLERY_pic img {
    height:300px;
}
.gallary_overly {
   position: absolute;
   top:15px;
   left:15px;
   bottom:15px;
   right:15px;
   background:rgba(0, 0, 0, 0.541);
   border: 5px solid rgba(255, 255, 255, 0.8);
   opacity:0;
   cursor: pointer;
   transition: all linear 0.9s;
   -webkit-transition: all linear 0.9s;
   -moz-transition: all linear 0.9s;
   -ms-transition: all linear 0.9s;
   -o-transition: all linear 0.9s;
}
.gallary_overly i{
     margin-top:120px;
    font-size:30px;
    color:var(--hovercolor);
}
.GALLERY_info:hover .gallary_overly{
    opacity: 1;
}

.GALLERY_slider .slick-dots {
    margin-left: 0;
    margin-top: 15px;
    text-align: center;
    overflow: hidden;
}

.GALLERY_slider .slick-dots li {
    width: 20px;
    height: 20px;
    margin: 0px 10px;
    background: var(--bgcolor);
    display: inline-block;
}

.GALLERY_slider .slick-dots li button {
    width: 17px;
    border: 1px solid var(--textcolor);
    height: 17px;
    border-radius: 50%;
    color: transparent;
}

.GALLERY_slider .slick-dots .slick-active button {
    background: var(--hovercolor);
}
/* ... */

